valid_tests/type_checking/test1.go
// Test 1: Compatible type assignments
func main() {
    var x int = 10
    var y int = x
    var f float64 = 3.14
    var s string = "hello"
    var b bool = true
}
